updates to add transaction requests feature
